[package]
name = "creeper-term"
version = "0.1.0"
edition = "2021"
authors = ["CreeperTerm Contributors"]
description = "A modern terminal emulator for developers"
license = "GPL-3.0"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["tokio", "tiny-skia", "fira-sans"] }
tokio = { version = "1", features = ["time"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
ssh2 = "0.9"
portable-pty = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
serde_json = "1.0"
smol_str = "0.2"
